feat(secure): add security police and prometeus
